[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Portal/StencilCamera.gd" type="Script" id=2]

[sub_resource type="Shader" id=54]
code = "shader_type canvas_item;

uniform sampler2D stencil_tex;

void fragment() {
//    vec2 uv = UV - 0.5;
//    uv.x *= 1.85;
//    float dist = sqrt(uv.x * uv.x + uv.y * uv.y);
//    COLOR.rgb = texture(TEXTURE, UV).rgb;
//    COLOR.a = smoothstep(0.5, 0.4, dist);
    COLOR.rgb = texture(TEXTURE, UV).rgb;
    COLOR.a = texture(stencil_tex, UV).g;
}"

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("Player/StencilViewport")

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = SubResource( 54 )
shader_param/stencil_tex = SubResource( 10 )

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("Player/PortalViewport")

[sub_resource type="CapsuleShape" id=2]
radius = 0.25
height = 0.5

[sub_resource type="CapsuleMesh" id=3]
radius = 0.25
mid_height = 0.5

[sub_resource type="Environment" id=11]
background_mode = 1

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.208635, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
cull_mask = 1048559
far = 500.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="StencilViewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="StencilCamera" type="Camera" parent="StencilViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.174859, 1.37617, 0 )
cull_mask = 16
environment = SubResource( 11 )
far = 4000.0
script = ExtResource( 2 )
main_cam_path = NodePath("../../Pivot/Camera")

[node name="PortalViewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="PortalCamera" type="Camera" parent="PortalViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.95209, -0.599215, 6.78118 )
cull_mask = 1048559
